fix quote spacing

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,6 +13,7 @@ $heading-line-height: 1.2;
 // Other Sizes
 $base-border-radius: .52em;
 $base-spacing: $base-line-height * 1em;
+$quote-spacing: $base-spacing / 2;
 $small-spacing: $base-spacing / 2;
 $extra-small-spacing: $base-spacing / 6;
 $base-z-index: 0;
