--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -76,7 +76,7 @@ picture {
 }
 
 blockquote {
-  padding: $base-spacing 0 $base-spacing $base-spacing;
+  padding: 0 0 0 $quote-spacing;
   margin: $base-spacing 0;
   color: $dark-gray-color;
   line-height: 1.8;
